[package]
name = "link_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.46", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"